<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.github.philipjkim</groupId>
  <artifactId>prerender-java</artifactId>
  <version>1.0.1</version>
  <packaging>jar</packaging>

  <name>prerender-java</name>
  <url>https://github.com/philipjkim/prerender-java</url>

  <licenses>
    <license>
      <name>MIT License</name>
      <url>https://www.opensource.org/licenses/mit-license.php</url>
      <distribution>repo</distribution>
    </license>

  </licenses>
  <scm>
    <connection>scm:git:git@github.com:philipjkim/prerender-java.git</connection>
    <developerConnection>scm:git:git@github.com:philipjkim/prerender-java.git</developerConnection>
    <url>git@github.com:philipjkim/prerender-java.git</url>
  </scm>
  <description/>
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <junit.version>4.13.2</junit.version>
    <mockito.version>1.10.19</mockito.version>
    <guava.version>31.1-jre</guava.version>
    <commons-lang.version>2.6</commons-lang.version>
    <commons-io.version>2.11.0</commons-io.version>
    <servlet-api.version>2.5</servlet-api.version>
    <httpclient.version>4.5.13</httpclient.version>
    <lombok.version>1.18.24</lombok.version>
    <logback.version>1.2.11</logback.version>
    <slf4j.version>1.7.36</slf4j.version>
  </properties>

  <dependencies>
    <dependency>
      <groupId>com.google.guava</groupId>
      <artifactId>guava</artifactId>
      <version>${guava.version}</version>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-all</artifactId>
      <version>${mockito.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>commons-lang</groupId>
      <artifactId>commons-lang</artifactId>
      <version>${commons-lang.version}</version>
    </dependency>
    <dependency>
      <groupId>commons-io</groupId>
      <artifactId>commons-io</artifactId>
      <version>${commons-io.version}</version>
    </dependency>
    <dependency>
      <groupId>javax.servlet</groupId>
      <artifactId>servlet-api</artifactId>
      <version>${servlet-api.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.httpcomponents</groupId>
      <artifactId>httpclient</artifactId>
      <version>${httpclient.version}</version>
    </dependency>
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <version>${lombok.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>ch.qos.logback</groupId>
      <artifactId>logback-classic</artifactId>
      <version>${logback.version}</version>
    </dependency>
    <dependency>
      <groupId>ch.qos.logback</groupId>
      <artifactId>logback-core</artifactId>
      <version>${logback.version}</version>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>${slf4j.version}</version>
    </dependency>
  </dependencies>

  <distributionManagement>
    <repository>
      <id>prerender-java</id>
      <name>GitHub philipjkim Apache Maven Packages</name>
      <url>https://maven.pkg.github.com/philipjkim/prerender-java</url>
    </repository>
  </distributionManagement>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.10.0</version>
        <configuration>
          <source>17</source>
          <target>17</target>
          <encoding>UTF-8</encoding>

          <compilerArgs>
            <arg>--add-exports</arg>
            <arg>java.base/sun.security.util=ALL-UNNAMED</arg>
            <arg>--add-exports</arg>
            <arg>java.base/jdk.internal.misc=ALL-UNNAMED</arg>
            <arg>--add-exports</arg>
            <arg>java.base/java.lang=ALL-UNNAMED</arg>
            <arg>--add-exports</arg>
            <arg>java.base/java.lang.reflect=ALL-UNNAMED</arg>
            <arg>--add-exports</arg>
            <arg>java.base/java.io=ALL-UNNAMED</arg>
            <arg>--add-exports</arg>
            <arg>java.base/java.util=ALL-UNNAMED</arg>
            <arg>--add-exports</arg>
            <arg>java.base/java.time=ALL-UNNAMED</arg>
            <arg>--add-exports</arg>
            <arg>java.base/java.time.zone=ALL-UNNAMED</arg>
          </compilerArgs>

          <showWarnings>true</showWarnings>
          <showDeprecation>true</showDeprecation>

          <annotationProcessorPaths>
            <path>
              <groupId>org.projectlombok</groupId>
              <artifactId>lombok</artifactId>
              <version>${lombok.version}</version>
            </path>
          </annotationProcessorPaths>

        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>3.4.0</version>
        <executions>
          <execution>
            <id>attach-javadoc</id>
            <phase>verify</phase>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>3.2.0</version>
        <executions>
          <execution>
            <id>attach-sources</id>
            <phase>verify</phase>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.0.0-M7</version>
        <configuration>
          <argLine>
            --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.time=ALL-UNNAMED --add-opens=java.base/java.time.zone=ALL-UNNAMED
          </argLine>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
